  [29204] libc: getusershell is not 2038 aware
  [29207] libc: posix_fallocate fallback implementation is not y2038
  [29208] libc: fpathconf(_PC_ASYNC_IO) is not y2038 aware
  [29209] libc: isfdtype is not y2038 aware
  [29210] network: ruserpass is not y2038 aware
  [29211] libc: __open_catalog is not y2038 aware
  [29213] libc: gconv_parseconfdir is not y2038 aware


Version 2.35

Major new features:

* Unicode 14.0.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 14.0.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* Bump r_version in the debugger interface to 2 and add a new field,
  r_next, support multiple namespaces.

* Support for the C.UTF-8 locale has been added to glibc.  The locale
  supports full code-point sorting for all valid Unicode code points.  A
  limitation in the framework for fnmatch, regexec, and regcomp requires
  a compromise to save space and only ASCII-based range expressions are
  supported for now (see bug 28255).  The full size of the locale is
  only ~400KiB, with 346KiB coming from LC_CTYPE information for
  Unicode.  This locale harmonizes downstream C.UTF-8 already shipping
  in various downstream distributions.  The locale is not built into
  glibc, and must be installed.

* <math.h> functions that round their results to a narrower type, and
  corresponding <tgmath.h> macros, are added from TS 18661-1:2014, TS
  18661-3:2015 and draft ISO C2X:

  - fsqrt, fsqrtl, dsqrtl and corresponding fMsqrtfN, fMsqrtfNx,
    fMxsqrtfN and fMxsqrtfNx functions.

  - ffma, ffmal, dfmal and corresponding fMfmafN, fMfmafNx, fMxfmafN and
    fMxfmafNx functions.

* <math.h> functions for floating-point maximum and minimum,
  corresponding to new operations in IEEE 754-2019, and corresponding
  <tgmath.h> macros, are added from draft ISO C2X: fmaximum,
  fmaximum_num, fmaximum_mag, fmaximum_mag_num, fminimum, fminimum_num,